# valkyrie_simulation

./: README.md
valkyrie_bringup/: CMakeLists.txt  package.xml
valkyrie_bringup/launch/: show.launch  upload_model.launch
valkyrie_controller_configuration_gazebo/: CMakeLists.txt  package.xml
valkyrie_controller_configuration_gazebo/config/: effort_controllers.yaml
valkyrie_controller_configuration_gazebo/launch/: default_controllers.launch  effort_controllers.launch
valkyrie_gazebo/: CMakeLists.txt  package.xml
valkyrie_gazebo/launch/: valkyrie_gazebo.launch  valkyrie_spawn.launch
valkyrie_gazebo/models/international_space_station/: model.config  model.sdf
valkyrie_gazebo/worlds/: space.world
valkyrie_hardware_gazebo/: CMakeLists.txt  gazebo_plugins.xml  package.xml
valkyrie_hardware_gazebo/include/valkyrie_hardware_gazebo/: valkyrie_hardware_gazebo.h
valkyrie_hardware_gazebo/src/: valkyrie_hardware_gazebo.cpp
valkyrie_simulation/: CMakeLists.txt  package.xml
