<?xml version="1.0"?>
<package>
  <name>valkyrie_gazebo</name>
  <version>0.0.0</version>
  <description>The valkyrie_gazebo package</description>
  <maintainer email="bence@todo.todo">bence</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>val_description</build_depend>
  <build_depend>valkyrie_bringup</build_depend>
  <build_depend>valkyrie_controller_configuration_gazebo</build_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>val_description</run_depend>
  <run_depend>valkyrie_bringup</run_depend>
  <run_depend>valkyrie_controller_configuration_gazebo</run_depend>
</package>
