<?xml version="1.0"?>
<package>
  <name>valkyrie_simulation</name>
  <version>0.0.0</version>
  <description>The valkyrie_simulation package</description>
  <maintainer email="bence@todo.todo">bence</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>valkyrie_description</run_depend>
  <run_depend>valkyrie_controller_configuration_gazebo</run_depend>
  <run_depend>valkyrie_bringup</run_depend>
  <export>
    <metapackage/>
  </export>
</package>
